--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 		body {
 			font-size: 18px;
+
 		}
 
 		.main-navigation li {
@@ -176,7 +177,8 @@
 		.widget-area .widget a,
 		.site-footer,
 		.site-footer a {
-			color: #4a4a4a
+			color: #4a4a4a;
+
 		}
 
 		.site-title a,
@@ -399,9 +401,17 @@ End of comment */
 		.site-footer {
 			display: none;
 		}
-
+		.site {
+			background-image: url("/airplane.JPG");
+			height: 100vh;
+			width: 100vw;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
 		.ignis-hero-area {
-			background-color: #4d4d4d;
+
+
 			margin: 0;
 		}
 	</style>
@@ -413,14 +423,14 @@ End of comment */
 	</style>
 </head>
 
-<body style="overflow:hidden" class="home page-template-default page page-id-4 dslc-page dslc-page-has-content sticky-header">
+<body style="overflow:hidden"  class="home page-template-default page page-id-4 dslc-page dslc-page-has-content sticky-header">
 	<div id="page" class="site">
 		<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
-		<header id="masthead" class="site-header clearfix" role="banner">
+		<header id="masthead" style="background: none" class="site-header clearfix" role="banner">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
 				<div class="branding-inner">
-					<p class="site-title"><a href="/" rel="home">Maanas &nbsp;Manoj</a></p>
+					<p class="site-title"><a style="color: white" href="/" rel="home">Maanas &nbsp;Manoj</a></p>
 				</div>
 			</div>
 			<!-- .site-branding -->
@@ -428,8 +438,8 @@ End of comment */
 			<nav id="site-navigation" class="main-navigation col-md-8" role="navigation">
 				<div id="primary-menu" class="menu">
 					<ul>
-						<li class="page_item page-item-6"><a href="/contact-me">Contact Me</a></li>
-						<li class="page_item page-item-63"><a href="/projects">Projects</a></li>
+						<li class="page_item page-item-6"><a style="color: white" href="/contact-me">Contact Me</a></li>
+						<li class="page_item page-item-63"><a style="color: white" href="/projects">Projects</a></li>
 					</ul>
 				</div>
 				<div class="btn-close-menu">&times;</div>
@@ -447,7 +457,7 @@ End of comment */
 							<p>drummer,</p>
 						</div>
 					</span></h2>
-				<p style="color:#a8a8a8">and this is a collection of my stuff.</p>
+				<p style="color:#c4c4c4">and this is a collection of my stuff.</p>
 			</div>
 		</div>
 
