--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		a,
 		a:hover,
 		.color-primary {
-			color: #939393
+			color: #6bb1d4
 		}
 
 		.woocommerce input.button.alt,
@@ -156,7 +156,7 @@
 		.portfolio-entry-meta a:hover,
 		.cat-links a:hover,
 		.woocommerce-message::before {
-			color: #c1c1c1
+			color: #6bb1d4
 		}
 
 		.woocommerce-message,
